kubernetes/gr-foundry/manifests/postgres-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-prod
  namespace: postgres-prod
spec:
  selector:
    app: postgres-prod
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
